// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup[Base] should render correctly by CheckboxBlock 1`] = `
<div
  class="c-vt37hb"
>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      red
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      orange
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      yellow
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      green
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      cyan
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      blue
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`CheckboxGroup[Base] should render correctly by CheckboxGroup 1`] = `
<div
  class="c-vt37hb"
>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid red;"
      >
        red
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid orange;"
      >
        orange
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid yellow;"
      >
        yellow
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid green;"
      >
        green
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid cyan;"
      >
        cyan
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid blue;"
      >
        blue
      </span>
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      <span
        style="border-bottom: 1px solid violet;"
      >
        violet
      </span>
    </span>
  </div>
</div>
`;

exports[`CheckboxGroup[Base] should render correctly by CheckboxRawgroup 1`] = `
<div
  class="c-vt37hb"
>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      red
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      cyan
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      blue
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      green
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      yellow
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      orange
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`CheckboxGroup[Disabled] should render correctly by disabled-A 1`] = `
<div
  class="c-vt37hb"
>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      red
    </span>
  </div>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      orange
    </span>
  </div>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      yellow
    </span>
  </div>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      green
    </span>
  </div>
  <div
    class="c-2oyyob csnudt c-jx5dse"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      cyan
    </span>
  </div>
  <div
    class="c-2oyyob csnudt c-jx5dse"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      blue
    </span>
  </div>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      violet
    </span>
  </div>
</div>
`;

exports[`CheckboxGroup[Disabled] should render correctly by disabled-B 1`] = `
<div
  class="c-vt37hb"
>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      red
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      orange
    </span>
  </div>
  <div
    class="c-2oyyob csnudt"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="-1"
      />
    </span>
    <span
      class="c19hl67"
    >
      yellow
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      green
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      cyan
    </span>
  </div>
  <div
    class="c-2oyyob c-jx5dse"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
        >
          <path
            d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
          />
          <path
            d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
          />
        </svg>
      </i>
    </span>
    <span
      class="c19hl67"
    >
      blue
    </span>
  </div>
  <div
    class="c-2oyyob"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <span
      class="c-do3bmm"
    >
      <i
        class="cs409o1"
        data-soui-role="checkbox-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c19hl67"
    >
      violet
    </span>
  </div>
</div>
`;
